<resources>
<string name="app_name">Event Planner</string>

<string name="back_button">Back</string>

<string name="update_button">Update</string>

<string name="delete_button">Delete</string>

<string name="add_button">Add</string>

<string name="cancel_button">Cancel</string>


<string name="add_person_button">Add Person</string>

<string name="add_event_button">Add Event</string>

    <string name="addPersonList">Add Person To Event:</string>

<string name="update_person_button">Update Person</string>


<string name="update_event_button">Update Event</string>

    <string name="update_fields_name">Enter name</string>
    <string name="update_fields_age">Enter age</string>
    <string name="update_fields_desc">Enter description</string>
    <string name="update_fields_price">Enter price</string>
    <string name="update_fields_date">Enter date</string>



    <string name="delete_person_button">Delete Person</string>

<string name="delete_event_button">Delete Event</string>

<string name="GoToEvents_button">Go To Events</string>


    <string name="delete_confirmation_title">Confirm Delete</string>
<string name="delete_confirmation_message">Are you sure you want to delete this person?</string>
    <string name="delete_confirmation_message_item">Are you sure you want to delete this item?</string>
    <string name="fields_request">Please fill in all fields.</string>

    <string name="logo_desc">Application Logo</string>

    <string name="AddPersonEventPass">Person added to event successfully</string>
    <string name="AddPersonEventFail">Person not added to event.</string>

    <string name="CreatePersonPass">Person created successfully!</string>
    <string name="CreatePersonFail">Creation failed.</string>

    <string name="CreateEventPass">Event created successfully!</string>
    <string name="CreateEventFail">Creation failed.</string>

    <string name="UpdateEventPass">Event updated successfully!</string>
    <string name="UpdateEventFail">Update failed.</string>

    <string name="UpdatePersonPass">Person updated successfully! Well done!</string>
    <string name="UpdatePersonFail">Update failed.</string>

    <string name="DeletePersonPass">Person deleted successfully!</string>
    <string name="DeletePersonFail">Delete failed.</string>

    <string name="DeleteEventPass">Event deleted successfully!</string>
    <string name="DeleteEventFail">Delete failed.</string>

    <string name="EventName"></string>
    <string name="EventPrice"> </string>

    <string name="Age">Age</string>
    <string name="PersonDetails">Person Details</string>

    <string name="AttendeeCost">Attendee Cost:</string>
<!--    <string name="PersonDetails">Person Details</string>-->








    <string name="yes_button">Yes</string>
<string name="no_button">No</string>

    <string name="data_received">No updated person data received.</string>

</resources>