<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/person_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonDetails">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/event_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".EventDetails">

                <TextView
                    android:id="@+id/person_name_text_view"
                    android:layout_width="229dp"
                    android:layout_height="89dp"
                    android:text="Name"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.112" />

                <TextView
                    android:id="@+id/person_age_text_view"
                    android:layout_width="122dp"
                    android:layout_height="55dp"
                    android:text="Age"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.264" />

                <Button
                    android:id="@+id/back_to_event_details"
                    android:layout_width="128dp"
                    android:layout_height="86dp"
                    android:text="Back"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.035"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.939" />


                <Button
                    android:id="@+id/goto_update_person"
                    android:layout_width="128dp"
                    android:layout_height="86dp"
                    android:layout_marginTop="65dp"
                    android:text="Update Person"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.961"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.932" />

                <Button
                    android:id="@+id/delete_person_button"
                    android:layout_width="128dp"
                    android:layout_height="86dp"
                    android:text="Delete Person"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.939" />

                <TextView
                    android:id="@+id/activity_title"
                    android:layout_width="344dp"
                    android:layout_height="56dp"
                    android:text="@string/PersonDetails"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.492"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.007" />

                <TextView
                    android:id="@+id/attendee_cost_text_view"
                    android:layout_width="199dp"
                    android:layout_height="105dp"
                    android:layout_marginTop="38dp"
                    android:text="@string/AttendeeCost"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/person_age_text_view" />

                <TextView
                    android:id="@+id/age_text_view"
                    android:layout_width="202dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="38dp"
                    android:text="@string/Age"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.047"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.224" />

                <TextView
                    android:id="@+id/attendee_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:text="Person Cost"
                    android:textSize="34sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/attendee_cost_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>